--- a/Front_inventario/src/app/pages/home/home.component.html
+++ b/Front_inventario/src/app/pages/home/home.component.html
@@ -1,6 +1,7 @@
+<input type="button" value="Cadastrar novo item">
 <div class="input-box">
-    <label>Procurar:</label>
-    <input type="text" placeholder="Digite o item a ser pesquisado">
+    <label>Procurar item:</label>
+    <input type="text" placeholder="Digite o item a ser pesquisado" (input)="Search($event)">
 </div>
 
 <table class="table">
@@ -10,7 +11,6 @@
             <th>Nome</th>
             <th>Modelo</th>
             <th>Descrição</th>
-            <th>Modelo</th>
             <th>Quantidade</th>
             <th></th>
             <th></th>
@@ -18,7 +18,6 @@
             <th></th>
         </tr>
     </thead>
-
     <tbody *ngFor="let item of items">
         <tr>
             <td>{{item.codPatrimonio}}</td>
