implementando o component item formulario

--- a/Front_inventario/src/app/pages/home/home.component.html
+++ b/Front_inventario/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<input type="button" value="Cadastrar novo item">
+<button routerLink="/cadastro-item">Cadastrar novo item</button>
 <div class="input-box">
     <label>Procurar item:</label>
     <input type="text" placeholder="Digite o item a ser pesquisado" (input)="Search($event)">
