implementado o cadastro de itens comunicando com a api

--- a/Front_inventario/src/app/componentes/item-form/item-form.component.html
+++ b/Front_inventario/src/app/componentes/item-form/item-form.component.html
@@ -15,7 +15,7 @@
 
     <div class="input_box">
         <label for="">Descrição:</label>
-        <input type="text" formControlName="descicao" placeholder="Insira a descriçao do item" required>
+        <input type="text" formControlName="descricao" placeholder="Insira a descriçao do item" required>
     </div>
 
     
@@ -26,6 +26,6 @@
 
     <div class="btn-box">
         <button type="submit">Cadastrar</button>
-        <button>Voltar</button>
+        <button routerLink=""> Voltar</button>
     </div>
 </form>
