--- a/Front_inventario/src/app/pages/cadastro-item/cadastro-item.component.html
+++ b/Front_inventario/src/app/pages/cadastro-item/cadastro-item.component.html
@@ -1,4 +1,4 @@
 <h1>Cadastrar novo item</h1>
 <div>
-    <app-item-form></app-item-form>
+    <app-item-form (onSubmit)="createItem($event)"></app-item-form>
 </div>
